# lynx

./: .gitignore  .gn  .habitat  .npmrc  .tools_shared  AGENTS.md  BUILD.gn  DEPS  DEPS.clay  DEPS.dev  Gemfile  config.gni  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
base/platform/android/: BUILD.gn
clay/assets/: BUILD.gn  asset_manager.cc  asset_manager.h  asset_resolver.h  directory_asset_bundle.cc  directory_asset_bundle.h
clay/common/graphics/: BUILD.gn  drawable_image.cc  drawable_image.h  gl_context_switch.cc  gl_context_switch.h  graphic_meminfo.h  msaa_sample_count.h  persistent_cache.cc  persistent_cache.h  screenshot.h  shared_drawable_image.h  shared_image_external_bitmap.cc  shared_image_external_bitmap.h  shared_image_external_texture.cc  shared_image_external_texture.h
clay/common/service/: BUILD.gn  service.cc  service.h  service_manager.h  service_unittests.cc
clay/example/glfw/: BUILD.gn  README.md  clay_glfw.cc  clay_logo.h  custom_task_runner.cc  custom_task_runner.h  event_loop.cc  event_loop.h  platform_view_impl.h  shell_impl.cc  shell_impl.h  surface_gl_impl.h  thread_host_holder.cc  thread_host_holder.h
clay/flow/: BUILD.gn  compositor_context.cc  compositor_context.h  diff_context.cc  diff_context.h  diff_context_unittests.cc  drawable_image_unittests.cc  embedded_view_params_unittests.cc  embedded_views.cc  embedded_views.h  flow_rendering_backend.h  flow_run_all_unittests.cc  flow_test_utils.cc  flow_test_utils.h  frame_timings.cc  frame_timings.h  frame_timings_recorder_unittests.cc  gl_context_switch_unittests.cc  layer_snapshot_store.cc  layer_snapshot_store.h  matrix_clip_tracker.cc  matrix_clip_tracker.h  matrix_clip_tracker_unittests.cc  mutators_stack_unittests.cc  paint_region.cc  paint_region.h  paint_utils.cc  paint_utils.h  raster_cache.cc  raster_cache.h  raster_cache_item.h  raster_cache_key.cc  raster_cache_key.h  raster_cache_unittests.cc  raster_cache_util.cc  raster_cache_util.h  rtree.cc  rtree.h  rtree_unittests.cc  stopwatch.cc  (+10 more)
clay/flow/animation/: animation_host.cc  animation_host.h  animation_mutator.cc  animation_mutator.h  scroll_offset_animation.cc  scroll_offset_animation.h  scroll_offset_animation_unittests.cc
clay/flow/compositor/: compositor_state.cc  compositor_state.h  compositor_state_unittests.cc  overlay_views.h
clay/flow/layers/: backdrop_filter_layer.cc  backdrop_filter_layer.h  backdrop_filter_layer_unittests.cc  cacheable_layer.cc  cacheable_layer.h  checkerboard_layertree_unittests.cc  clip_path_layer.cc  clip_path_layer.h  clip_path_layer_unittests.cc  clip_rect_layer.cc  clip_rect_layer.h  (+67 more)
clay/fml/: BUILD.gn  LICENSE  ascii_trie.cc  ascii_trie.h  ascii_trie_unittests.cc  atomic_sequence_num.h  backtrace.cc  backtrace.h  backtrace_android.cc  backtrace_stub.cc  backtrace_unittests.cc  base32.cc  base32.h  base32_unittest.cc  base64.cc  base64.h  base64_unittests.cc  command_line.cc  command_line.h  command_line_unittest.cc  container.h  container_unittests.cc  endianness.cc  endianness.h  endianness_unittests.cc  file.cc  file.h  file_unittest.cc  fml.gni  hex_codec.cc  hex_codec.h  hex_codec_unittest.cc  icu_util.cc  icu_util.h  log_level.h  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h  (+13 more)
clay/gfx/: BUILD.gn  attributes.h  attributes_testing.h  comparable.h  gfx_rendering_backend.h  gfx_utils.cc  gfx_utils.h  gpu_object.h  gpu_object_unittests.cc  gpu_ref_object.h  graphics_canvas.cc  graphics_canvas.h  graphics_context.cc  graphics_context.h  graphics_isolate.cc  graphics_isolate.h  paint.cc  paint.h  paint_decoding_image.h  paint_image.cc  paint_image.h  paint_image_skia.cc  paint_image_skia.h  paint_image_skia_lazy.cc  paint_image_skia_lazy.h  paint_image_skity.cc  paint_image_skity.h  paint_recorder.h  paint_recorder_skia.cc  paint_recorder_skity.cc  paint_unittests.cc  picture.cc  picture.h  pixel_helper.h  rendering_backend.h  scroll_direction.h  skity_to_skia_utils.h  testing_utils.h  text_blob.cc  text_blob.h  (+4 more)
clay/memory/: BUILD.gn  discardable_memory.h  discardable_memory_allocator.h  discardable_memory_allocator_impl.cc  discardable_memory_allocator_impl.h  discardable_memory_allocator_unittests.cc  discardable_memory_impl.h  discardable_memory_impl_posix.cc  discardable_memory_impl_win.cc  discardable_memory_unittests.cc  heap_discardable_memory.h  heap_discardable_memory_unittests.cc  memory_pressure_listener.cc  memory_pressure_listener.h  memory_pressure_listener_unittests.cc  memory_pressure_monitor.cc  memory_pressure_monitor.h  system_memory_pressure_evaluator.cc  system_memory_pressure_evaluator.h  system_memory_pressure_evaluator_mac.cc  system_memory_pressure_evaluator_mac.h  system_memory_pressure_evaluator_mac_unittests.cc  system_memory_pressure_evaluator_win.cc  system_memory_pressure_evaluator_win.h  system_memory_pressure_evaluator_win_unittests.cc
clay/shell/: config.gni
clay/testing/: BUILD.gn  android_systrace_test.py  assertions.h  assertions_skia.cc  assertions_skia.h  canvas_test.h  debugger_detection.cc  debugger_detection.h  fixture_test.cc  fixture_test.h  lsan_suppressions.txt  mock_canvas.cc  mock_canvas.h  mock_canvas_unittests.cc  post_task_sync.cc  post_task_sync.h  run_all_unittests.cc  run_tests.py  sanitizer_suppressions.sh  test_gl_surface.cc  test_gl_surface.h  test_metal_context.h  test_metal_context.mm  test_metal_surface.cc  test_metal_surface.h  test_metal_surface_impl.h  test_metal_surface_impl.mm  test_metal_surface_unittests.cc  test_timeout_listener.cc  test_timeout_listener.h  testing.cc  testing.gni  testing.h  thread_test.cc  thread_test.h  tsan_suppressions.txt
clay/version/: BUILD.gn  version.cc  version.gni  version.h  write_file.py
gfx/: BUILD.gn
gfx/animation/: animation_keyframe.h  animation_keyframe_curve.h  animation_keyframe_effect.cc  animation_keyframe_effect.h  animation_keyframe_model.cc  animation_keyframe_model.h  animation_types.h  animation_utils.cc  animation_utils.h  cubic_bezier.cc  cubic_bezier.h  timing_function.cc  timing_function.h
testing/lynx_devtool/: BUILD.gn
(+3933 files in other folders)
