# Copyright 2020 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
script_executable = rebase_path("//.venv/bin/python3")

buildconfig = "//build/config/BUILDCONFIG.gn"

secondary_source = "//build/secondary/"

root = ":root"

default_args = {
  lynx_dir = ""

  # Disable ANGLE vulkan
  angle_enable_vulkan = false
  angle_build_vulkan_system_info = false

  # Do not build ANGLE tests
  angle_build_all = false
}
