# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../common/config.gni")

source_set("assets") {
  if (is_harmony) {
    sources = [
      "asset_manager.cc",
      "asset_manager.h",
      "asset_resolver.h",
      "directory_asset_bundle.cc",
      "directory_asset_bundle.h",
    ]
  }

  deps = [
    "../common",
    "../fml:fml",
  ]

  configs += [ "../:config" ]
}
