# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

group("devtool_unit_test") {
  testonly = true
  deps = [
    "../../devtool/lynx_devtool/element:devtool_element_unit_test",
    "../../devtool/lynx_devtool/js_debug:js_debug_unit_test",
    "../../devtool/lynx_devtool/recorder:test_bench_utils_unit_test",
    "../../devtool/testing:devtool_ng_unit_test",
  ]
}
