# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//build/toolchain/clang.gni")
import("../../../config.gni")
import("../../../tools/gn_tools/cmake_target_template.gni")

assert(is_android)

config("base_android_private_config") {
  ldflags = [
    "-Wl,--exclude-libs,ALL,--gc-sections",
    "-fuse-ld=lld",
    "-Xlinker",
    "-Map=output.map",
  ]
  if (!is_debug) {
    ldflags += [
      "-O2",
      "-Wl,--icf=all",
    ]
    if (enable_lto) {
      ldflags += [ "-flto" ]
    }
  }
}

cmake_target("LynxBase") {
  cmake_version = "3.4.1"
  target_type = "shared_library"
  output_name = "lynxbase"

  deps = [
    ":base_jni_files",
    "../../src:base_group",
  ]

  sources = [
    # TODO(yongjie): remove logging_android.cc when lynx depends on LynxBase.
    "../../src/log/logging_android.cc",
  ]

  configs = [
    ":base_android_private_config",
    "../../../platform/android:16kb_page",
  ]
}

group("base_jni_files") {
  exec_script("../../../tools/build_jni/generate_and_register_jni_files.py",
              [
                "-root",
                rebase_path("../../../"),
                "-path",
                rebase_path("./src/main/jni/jni_configs.yml"),
                "--use-base-jni-header",
              ])
  public_deps = [ "src/main/jni:build" ]
}
