# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../common/config.gni")
import("../../testing/testing.gni")

source_set("service") {
  sources = [
    "service.cc",
    "service.h",
    "service_manager.cc",
    "service_manager.h",
  ]

  # Heed caution when adding targets to the dependencies. This is a minimal
  # target containing graphics sources that embedders can depend on. Any
  # additions here could result in added app sizes across embeddings.
  public_deps = [ "../../fml:fml" ]
}
