# Copyright 2024 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../common/config.gni")

gfx_animation_sources = [
  "accelerate_decelerate_interpolator.cc",
  "accelerate_decelerate_interpolator.h",
  "accelerate_interpolator.cc",
  "accelerate_interpolator.h",
  "animation_data.cc",
  "animation_data.h",
  "animation_event_handler.h",
  "animation_handler.cc",
  "animation_handler.h",
  "animation_properties_util.h",
  "animator.cc",
  "animator.h",
  "animator_listener.h",
  "animator_listener_adapter.h",
  "animator_target.h",
  "anticipate_interpolator.cc",
  "anticipate_interpolator.h",
  "anticipate_overshoot_interpolator.cc",
  "anticipate_overshoot_interpolator.h",
  "bounce_animator.cc",
  "bounce_animator.h",
  "bounce_interpolator.cc",
  "bounce_interpolator.h",
  "cubic_bezier_interpolator.cc",
  "cubic_bezier_interpolator.h",
  "cycle_interpolator.cc",
  "cycle_interpolator.h",
  "decelerate_interpolator.cc",
  "decelerate_interpolator.h",
  "dynamic_animator.cc",
  "dynamic_animator.h",
  "fling_animator.cc",
  "fling_animator.h",
  "interpolator.cc",
  "interpolator.h",
  "keyframe.cc",
  "keyframe.h",
  "keyframe_set.cc",
  "keyframe_set.h",
  "keyframes_manager.cc",
  "keyframes_manager.h",
  "lut_interpolator.cc",
  "lut_interpolator.h",
  "overshoot_interpolator.cc",
  "overshoot_interpolator.h",
  "path_interpolator.cc",
  "path_interpolator.h",
  "picture_animation_type.h",
  "steps_interpolator.cc",
  "steps_interpolator.h",
  "timing_function_data.cc",
  "timing_function_data.h",
  "transition_data.cc",
  "transition_data.h",
  "transition_manager.cc",
  "transition_manager.h",
  "type_evaluator.h",
  "value_animator.cc",
  "value_animator.h",
  "viscous_fluid_interpolator.cc",
  "viscous_fluid_interpolator.h",
]
